--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -8,7 +8,7 @@ resetLinkText="Reset Search"
   <li *ngFor = "let food of foods">
     <a routerLink="/food/{{food.id}}">
       <img [src]="food.imageUrl" [alt]="food.name"/>
-      <div class="conten">
+      <div class="content">
         <div class="name">
           {{food.name}}
         </div>
